add big photo and thumb photo

--- a/_posts/2015-05-15-yeoman.markdown
+++ b/_posts/2015-05-15-yeoman.markdown
@@ -8,9 +8,11 @@ type: 2
 ####Yeoman
 当你需要构建一个webapp项目时，为了更好的管理项目，Yeoman是一个不错的选择。有一下工具你可能需要提前安装：
 
-+ 1.`yo` - `Yeoman`用来自动初始化项目的工具.----create a new web app
-+ 2.你还需要一个包管理器，例如`bower`和`npm`.----handle dependencies 
-+ 3.当然，我们还需要build项目，如`Grunt`和`Gulp`.----preview,test and buid
+- `yo` - `Yeoman`用来自动初始化项目的工具.----create a new web app
+- 你还需要一个包管理器，例如`bower`和`npm`.----handle dependencies 
+- 当然，我们还需要build项目，如`Grunt`和`Gulp`.----preview,test and buid
+
+
 
 ####安装yo
 
