modify article ui

--- a/_posts/2015-06-03-proto.md
+++ b/_posts/2015-06-03-proto.md
@@ -28,7 +28,11 @@ type: 2
 
 上述代码非常简单，Person原型对象定义了公共的say方法，虽然此举在构造实例之后出现，但因为原型方法在调用之前已经声明，因此之后的每个实例将都拥有该方法。从这个简单的例子里，我们可以得出：
 `原型对象的用途是为每个实例对象存储共享的方法和属性，它仅仅是一个普通对象而已。并且所有的实例是共享同一个原型对象，因此有别于实例方法或属性，原型对象仅有一份。`所有就会有如下等式成立：
-｀person.say == new Person().say｀
+
+{% highlight javascript %}                
+    person.say == new Person().say
+{% endhighlight %}
+
 
 ### 可能我们也会这么写
 {% highlight javascript %}
