modify the font size for mobile device

--- a/_posts/2015-05-15-yeoman.markdown
+++ b/_posts/2015-05-15-yeoman.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post_layout
-title:  "如何利用自动化工具构建一个完整的webapp项目"
+title:  "自动化构建webapp项目"
 date:   2015-05-15 19:00PM
 categories: jekyll update
 type: 2
