--- a/_posts/2015-06-03-proto.md
+++ b/_posts/2015-06-03-proto.md
@@ -1,6 +1,6 @@
 ---
 layout: post_layout
-title:  "一个例子让你彻底明白原型对象和原型链"
+title:  "一个例子让你明白原型对象和原型链"
 date:   2015-06-03 10:47PM
 categories: jekyll update
 type: 2
