--- a/_posts/2015-05-25-lyric.md
+++ b/_posts/2015-05-25-lyric.md
@@ -1,6 +1,6 @@
 ---
 layout: post_layout
-title:  "利用Html5的audio标签实现歌词滚动同步"
+title:  "Html5实现歌词滚动同步"
 date:   2015-05-25 23:49PM
 categories: jekyll update
 type: 2
