momdify the title style

--- a/_posts/2015-06-11-lyric.md
+++ b/_posts/2015-06-11-lyric.md
@@ -7,7 +7,9 @@ type: 2
 ---
 ####开篇
 
-```HTML5的最强大之处莫过于对媒体文件的处理，如利用一个简单的vedio标签就可以实现视频播放。类似地,在HTML5中也有对应的处理音频文件的标签，那就是<audio>.标签```
+{% highlight sh %}
+HTML5的最强大之处莫过于对媒体文件的处理，如利用一个简单的vedio标签就可以实现视频播放。类似地,在HTML5中也有对应的处理音频文件的标签，那就是audio标签
+{% endhighlight %}
 
 [在线Demo](https://kkkkkxiaofei.github.io/lyric-demo)
 
