--- a/_posts/2015-06-04-inherit.md
+++ b/_posts/2015-06-04-inherit.md
@@ -4,6 +4,8 @@ title:  "Javascript中几种较为流行的继承方式"
 date:   2015-06-04 10:47PM
 categories: jekyll update
 type: 2
+summary: "从'严格'意义上说，javascript并不是一门真正的面向对象语言。这种说法原因一般都是觉得javascript作为一门弱类型语言与类似java或c#之类的强型语言的继承方式有很大的区别，因而默认它就是非主流的面向对象方式，甚至竟有很多书将其描述为'非完全面向对象'语言。其实个人觉得，什么方式并不重要，重要的是否具有面向对象的思想，说javascript不是面向对象语言的，往往都可能没有深入研究过javascript的继承方式，故特撰此文以供交流。"
+icon: "js-icon.jpg"
 ---
 ###开篇
 
