modify the issue when github page refreshes

--- a/_posts/2015-07-27-shrink.md
+++ b/_posts/2015-07-27-shrink.md
@@ -4,7 +4,7 @@ title:  "shrink-to-fit(自适应宽度)"
 date:   2015-07-27 14:05PM
 categories: jekyll update
 type: 2
-summary: "自适应宽度是指当未明确设定容器的宽度（或外边距设为auto）时，再特定的情况下容器的宽度会根据情况自行设定，而设定的结果往往并不是我们想要的。"
+summary: "自适应宽度是指当未明确设定容器的宽度（或外边距设为auto）时，在特定的情况下容器的宽度会根据情况自行设定，而设定的结果往往并不是我们想要的。"
 icon: "css3-icon.jpg"
 ---
 ####开篇
@@ -134,27 +134,3 @@ html&css
 > ![](/../img/shrink/shrink-test.png)
 
 总结：`对于浮动或者特殊的定位方式，推荐显式的设置容器宽度，避免出现意想不到的结果`
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
