modify some words in the article shrink-to-fit

--- a/_posts/2015-07-27-shrink.md
+++ b/_posts/2015-07-27-shrink.md
@@ -24,9 +24,9 @@ icon: "css3-icon.jpg"
 
 ####replaced elements & non-replaced elements
 
-css把html元素分为了两类：不可替换元素和可替换元素。
+css把html元素分为了两类：替换元素和非替换元素。
 
-* `1.不可替换元素`：
+* `1.替换元素`：
 
 大部分的html元素都由闭合标签构成，如：
 {% highlight html %}
@@ -34,7 +34,7 @@ css把html元素分为了两类：不可替换元素和可替换元素。
 {% endhighlight %}
 上边的div的内容被嵌入在两个标签之间，这种元素就是可替换元素，因为它的内容就真真切切的现实在那里（就在闭合标签的内部）。
 
-* `2.可替换元素`：
+* `2.非替换元素`：
 
 有一些元素没有构成闭合标签，自然它的内容也不在标签内，而是由外部资源加载出来的，这种元素就是可替换元素（内容可由外部资源来替换）。例如img:
 {% highlight html %}
