post an article about BFC

--- a/_posts/2015-07-27-shrink.md
+++ b/_posts/2015-07-27-shrink.md
@@ -28,7 +28,7 @@ css把html元素分为了两类：替换元素和非替换元素。
 
 * `1.可替换元素`：
 
-可替换元素是这样一些元素，其展现不是由CSS来控制的。这些外部元素的展现不依赖于CSS规范。 典型的可替换元素有 <img>、 <object>、 <video> 以及 <textarea>、 <input> 这样的表单元素。 一些元素，比如 <audio> 和 <canvas> ，只在一些特殊情况下是可替换元素。 使用了 CSS content 属性插入的对象被称作匿名的可替换元素。
+可替换元素是这样一些元素，其展现不是由CSS来控制的。这些外部元素的展现不依赖于CSS规范。 典型的可替换元素有 `<img>、 <object>、 <video>`以及 `<textarea>、 <input>`这样的表单元素。 一些元素，比如 `<audio>` 和 `<canvas>` ，只在一些特殊情况下是可替换元素。 使用了 CSS content 属性插入的对象被称作匿名的可替换元素。
 
 * `2.不可替换元素`：
 
