--- a/_posts/2015-08-10-bfc.md
+++ b/_posts/2015-08-10-bfc.md
@@ -1,6 +1,6 @@
 ---
 layout: post_layout
-title:  "理解CSS中的BFC(块级可视化上下文)"
+title:  "理解CSS中的BFC(块级可视化上下文)[译]"
 date:   2015-08-10 19:03PM
 categories: jekyll update
 type: 2
