--- a/_posts/2015-12-20-mvvm(2).md
+++ b/_posts/2015-12-20-mvvm(2).md
@@ -14,89 +14,87 @@ icon: "js-icon.jpg"
 
 还是先来看一下上一篇有关knockoutjs的Demo:
 
-`html`
 
 {% highlight html %}
-    <p>First name: <strong data-bind="text: firstName"></strong></p>
-    <p>Last name: <strong data-bind="text: lastName"></strong></p>
+<p>First name: <strong data-bind="text: firstName"></strong></p>
+<p>Last name: <strong data-bind="text: lastName"></strong></p>
 {% endhighlight %}
 
-`javascript`
-
 {% highlight javascript %}
-    var viewModel = {
-        firstName: "Bert",
-        lastName: "Bertington"
-    };
-    ko.applyBindings(viewModel);
+var viewModel = {
+    firstName: "Bert",
+    lastName: "Bertington"
+};
+ko.applyBindings(viewModel);
 {% endhighlight %}
 
 页面效果：
 
 First name: Bert
+
 Last name: Bertington
 
-在HTML里，我们用`data-bind: "text: firstName"`作为Binding Instruction,JS里的viewModel相当于一个$scope,当Dom加载时，首先会检查HTML标签，发现有Binding Instruction后会对DOM进行解析，此时根据具体的指令在viewModel中进行解析，将解析后的值渲染到已经生成的DOM树上，就完成了整个渲染工作，这个工作，就是前端模版渲染引擎的做的事情。
+在HTML里，我们用`data-bind: "text: firstName"`作为Binding Instruction,而在JS里的viewModel相当于一个$scope,当Dom加载时，首先会检查HTML标签，发现有Binding Instruction后会对DOM进行解析，此时根据具体的指令在viewModel中进行解析，将解析后的值渲染到已经生成的DOM树上，就完成了整个指令渲染工作，而这个流程，就是前端模版渲染引擎的主要任务。
 
 ##怎么做一个简单的渲染引擎
 
 其实称为`引擎`还真有点夸张，充其量它只不过是一个解析的逻辑流程，在整个过程中有三个部分：
 
-- ####模版，即Html
-- ####渲染源，即viewModel
-- ####所谓的引擎，一段解析流程的，有knockoutjs负责
+- 模版，即Html
+- 渲染源，即viewModel
+- 所谓的引擎，一段解析流程的，由knockoutjs负责
 
 现在我们来自己试着实现一下这个模版引擎。
 
-###模版
+###1.模版
 
-为了在渲染是保留原模版，我采用<template>去画Html模版，因为：
+为了在渲染是保留原模版，我采用template标签去画Html模版，因为：
 
-- ###template标签可以放在任意位置
-- ###template标签默认display: none
+- template标签可以放在任意位置
+- template标签默认display: none
 
-这种优点太适合做模版了。
+基于以上优点，个人觉得template标签太适合做模版了，难怪会称为template。
 
 {% highlight html %}
-    <template id="test">
-        <p>First name: <strong data-bind="text: firstName"></strong></p>
-        <p>Last name: <strong data-bind="text: lastName"></strong></p>
-    </template>
+<template id="test">
+    <p>First name: <strong data-bind="text: firstName"></strong></p>
+    <p>Last name: <strong data-bind="text: lastName"></strong></p>
+</template>
 {% endhighlight %}
 
 将我们要渲染的Html包裹在<template>中，加上id是为了能够确保唯一。
 
-###解析template
+###2.解析template
 
-###1.利用id我们可以唯一找到template，首先将template里的内容取出来，
+利用id我们可以唯一找到template，首先将template里的内容取出来，
 
 {% highlight javascript %}
-    var clone = document.importNode(document.querySelector('#' + id).content, true);
+var clone = document.importNode(document.querySelector('#' + id).content, true);
 {% endhighlight %}
 
-###2.分离子节点
+分离子节点
 
 {% highlight javascript %}
-    var fragmentContent = splitSubRealDoms(clone);
-    function splitSubRealDoms(fatherDom) {
-        var subRealDoms = [];
-        while(fatherDom.firstElementChild) {
-            var firstElementChild = fatherDom.removeChild(fatherDom.firstElementChild);
-            subRealDoms.push(firstElementChild);
-        }
-        return subRealDoms;
+var fragmentContent = splitSubRealDoms(clone);
+function splitSubRealDoms(fatherDom) {
+    var subRealDoms = [];
+    while(fatherDom.firstElementChild) {
+        var firstElementChild = fatherDom.removeChild(fatherDom.firstElementChild);
+        subRealDoms.push(firstElementChild);
     }
+    return subRealDoms;
+}
 {% endhighlight %}
 
 ###3.根据父节点的Binding Instruction去渲染子节点
 
 {% highlight javascript %}
-    for(var i = 0;i < fragmentContent.length;i++) {
-        var result = renderTemplate(fragmentContent[i], viewModel);
-    }
+for(var i = 0;i < fragmentContent.length;i++) {
+    var result = renderTemplate(fragmentContent[i], viewModel);
+}
 {% endhighlight %}
 
-renderTemplate的方法较为复杂，首先会渲染父节点，然后将所有的子节点当作父节点再次递归，直到没有子节点为止，递归后的结果是子节点集合渲染完后的结果，需要加入到重新加入到父节点中。递归中途需要对`data-bind = instruction: value`进行解析，将得到的value值在viewModel的$scope中，利用eval进行解析后绑定到DOM上。（详细代码略长，就不在这里贴了，可以去github的repo里去查看）
+renderTemplate的方法较为复杂，首先会渲染父节点，然后将所有的子节点当作父节点再次递归，直到没有子节点为止。递归后的子节点集合渲染完后，需要加入到重新加入到父节点中。递归中途需要对`data-bind = instruction: value`进行解析，将得到的value值在viewModel的$scope中，利用eval进行解析后绑定到DOM上。（详细代码略长，就不在这里贴了，可以去我的[repo](https://github.com/kkkkkxiaofei/Dig-Knockout)里去查看）
 
 ###4.渲染完成
 
@@ -105,5 +103,10 @@ renderTemplate的方法较为复杂，首先会渲染父节点，然后将所有
     $('body').append($(result));
 {% endhighlight %}
 
+####5.总结
+
+这一节主要介绍了前端模版引擎的工作原理，同时也分享了我自己的代码。但模版引擎仅仅只起到了单向绑定的效果（即viewModl->view），要想体现MVVM的优势，那就必须得实现双向绑定，那就必须的介绍MVVM中的核心对象observabel了，下一篇会介绍如何实现observable。
+
+[`源码请戳这里`](https://github.com/kkkkkxiaofei/Dig-Knockout)
 
 
