post a new article for mvvm3

--- a/_posts/2015-12-20-mvvm(2).md
+++ b/_posts/2015-12-20-mvvm(2).md
@@ -4,7 +4,7 @@ title:  "打造属于自己的MVVM框架: 2.模版渲染引擎"
 date:   2015-12-20 11:14AM
 categories: jekyll update
 type: 2
-summary: "上一篇介绍了MVVM的基本知识，本篇讲针对MVVM的模版渲染引擎进行介绍，不但从原理上对模版引擎的渲染原理进行剖析，而且有会相应的实现代码。"
+summary: "上一篇介绍了MVVM的基本知识，本篇将针对MVVM的模版渲染引擎进行介绍，不但从原理上对模版引擎的渲染原理进行剖析，而且有会相应的实现代码。"
 icon: "js-icon.jpg"
 ---
 
@@ -105,7 +105,7 @@ renderTemplate的方法较为复杂，首先会渲染父节点，然后将所有
 
 ####5.总结
 
-这一节主要介绍了前端模版引擎的工作原理，同时也分享了我自己的代码。但模版引擎仅仅只起到了单向绑定的效果（即viewModl->view），要想体现MVVM的优势，那就必须得实现双向绑定，那就必须的介绍MVVM中的核心对象observabel了，下一篇会介绍如何实现observable。
+这一节主要介绍了前端模版引擎的工作原理，同时也分享了我自己的代码。但模版引擎仅仅只起到了单向绑定的效果（即viewModl->view），要想体现MVVM的优势，那就必须得实现双向绑定，那就必须的介绍MVVM中的核心对象observable了，下一篇会介绍如何实现observable。
 
 [`源码请戳这里`](https://github.com/kkkkkxiaofei/Dig-Knockout)
 
