--- a/_posts/2015-12-21-mvvm(3).md
+++ b/_posts/2015-12-21-mvvm(3).md
@@ -48,8 +48,7 @@ add name undefined
 
 可以看到，`Object.observe`十分强大，它不但能监控对象的变化，而且连变化的类型都知道，十分的方便。
 然而，狗血的事情来了。正如我上面所说，它只是未来ECMA的标准，因此属于非标准的用法。兼容性如下：
-![](/../img/mvvm3/observe.jpg);
-
+![](/../img/mvvm3/observe.jpg)
 ###方案2.Object.defineProperty
 
 `Object.defineProperty`可以在对象上新添一个自定义的属性，属性的所有设置都有自己配置（是否可枚举，是否可读写等），十分灵活。这些并不能实现对象的监控，但它提供了`get`和`set`的属性器以及事件回调，因此我们可以利用这个`set`事件去实现对象的监控。
