update some md typo

--- a/_posts/2015-07-27-shrink.md
+++ b/_posts/2015-07-27-shrink.md
@@ -9,9 +9,7 @@ icon: "css3-icon.jpg"
 ---
 #### 开篇
 
-{% highlight sh %}
-自适应宽度是指当未明确设定容器的宽度（或外边距设为auto）时，再特定的情况下容器的宽度会根据情况自行设定，而设定的结果往往并不是我们想要的。
-{% endhighlight %}
+>自适应宽度是指当未明确设定容器的宽度（或外边距设为auto）时，再特定的情况下容器的宽度会根据情况自行设定，而设定的结果往往并不是我们想要的。
 
 #### W3C规范中描述的几种shrink-to-fit的情况
 
