--- a/_posts/2015-08-10-bfc.md
+++ b/_posts/2015-08-10-bfc.md
@@ -9,9 +9,7 @@ icon: "css3-icon.jpg"
 ---
 #### 开篇
 
-{% highlight sh %}
-一些元素，如float元素，如position为absolute,inline-block,table-cell或table-caption的元素，以及overflow属性不为visible的元素，它们将会建立一个新的块级格式化上下文。
-{% endhighlight %}
+>一些元素，如float元素，如position为absolute,inline-block,table-cell或table-caption的元素，以及overflow属性不为visible的元素，它们将会建立一个新的块级格式化上下文。
 
 上述定义已经很详细的描述了块级格式化上下文(Block Formatting Context)是如何形成的，为了方便起见，文中均用BFC代替。现在，让我们用一种简单的方式对其进行重新定义:
 BFC也是HTML中的一个盒子（看不见而已），只有满足至少下列条件之一才能形成BFC:
