--- a/_posts/2015-06-11-lyric.md
+++ b/_posts/2015-06-11-lyric.md
@@ -9,9 +9,7 @@ icon: "html5-icon.jpg"
 ---
 #### 开篇
 
-{% highlight sh %}
-HTML5的最强大之处莫过于对媒体文件的处理，如利用一个简单的vedio标签就可以实现视频播放。类似地,在HTML5中也有对应的处理音频文件的标签，那就是audio标签。
-{% endhighlight %}
+>HTML5的最强大之处莫过于对媒体文件的处理，如利用一个简单的vedio标签就可以实现视频播放。类似地,在HTML5中也有对应的处理音频文件的标签，那就是audio标签。
 
 [在线Demo](https://kkkkkxiaofei.github.io/lyric-demo)
 
